--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,1 @@
-titulo: Tema de la maquina del tiempo
-descripción: Time MAchine es un tema para paginas de GitHub.
-tema: máquina del tiempo con tema de Jekyll
+theme: jekyll-theme-time-machine
